# aiperf

./: .dockerignore  .gitignore  .markdownlintignore  .pre-commit-config.yaml  AGGREGATE_THROUGHPUT_EXPLAINED.md  AIP-0002-kubernetes-deployment.md  AIP-001_IMPLEMENTATION_COMPLETE.md  AIPERF_DEVELOPERS_GUIDE.md  ATTRIBUTIONS.md  BUILD_INSTRUCTIONS.md  CLAUDE.md  CLI_REFERENCE.md  COMPLETE_IMPLEMENTATION_SUMMARY.md  COMPLETE_PROJECT_SUMMARY.md  CONTRIBUTING.md  DATASET_CHUNKING_AND_DETERMINISTIC_COMPLETE.md  DATASET_CHUNKING_DESIGN.md  DATASET_CHUNKING_FINAL.md  DATASET_CHUNKING_IMPLEMENTATION_SUMMARY.md  DATASET_CHUNKING_REPRODUCIBILITY_FIX.md  DATASET_OPTIMIZATION_COMPLETE.md  DEADLOCK_ANALYSIS.md  DOCUMENTATION_COMPLETE.md  DUAL_PURPOSE_FLAG_SUMMARY.md  Dockerfile  Dockerfile.kubernetes  END_TO_END_TEST_RESULTS.md  EXPORT_FEATURE_FINAL_SUMMARY.md  EXPORT_LEVELS_IMPLEMENTATION.md  EXTREME_CONCURRENCY_GUIDE.md  FACTORY_MIGRATION_COMPLETE.md  FINAL_PROJECT_SUMMARY.md  FINAL_STATUS.md  FIXES.md  GUIDEBOOK_AND_EXAMPLES_SUMMARY.md  HTTP2_CLIENT_README.md  HTTPX_CLIENT_README.md  IMPLEMENTATION_COMPLETE_SUMMARY.md  INTEGRATION_TEST_STATUS.md  KUBERNETES.md  (+125 more)
.devcontainer/: post-create.sh
.github/: copilot-instructions.md
aiperf/: README.md  __init__.py  bootstrap.py  cli.py  cli_runner.py  cli_utils.py  component_init.py  main.py  module_loader.py  py.typed  requirements.txt  run.py  setup.py
artifacts/: profile_export_aiperf.json
benchmarks/: dataset_chunking_benchmark.py
docs/: ARCHITECTURE_DIAGRAM.md  Coding Standards.md  Developer FAQ.md  Development.md  METRICS_REFERENCE.md  MINIKUBE_INTEGRATION_TESTING.md  QUICK_REFERENCE.md  ULTIMATE_USER_GUIDE.md  aiperf-developers-guide.md  aiperf-kubernetes.md  cli-options.md  developer-guide.md  export-levels.md  genai-perf-help.md  hook-system.md  kubernetes-deployment-guide.md  kubernetes-implementation-comparison.md  kubernetes-integration-architecture.md  kubernetes-testing.md  metrics_reference.md  multi_node_dataset_deployment.md  multi_turn_conversations.md  pluggy_migration_guide.md  plugins.md  profile_exports.md  raw-records-export.md  raw_record_export.md  repo_structure.md  response_processing.md  rich_profile_progress_container.md  rich_worker_status_container.md  terminology-glossary.md  ultra_performance_implementation.md  ultra_throughput_guide.md  user-guide.md  zmq-proxies.md  zmq-socket-types.md
examples/: README.md  README_MONITORING.md  README_openai_plugin.md  benchmark_throughput.py  custom_endpoint_plugin.py  dask_worker_manager_demo.py  debug_communication.py  fastapi_server.py  http2_client_demo.py  monitor_broker_performance.py  monitor_comparison.py  monitor_worker_performance.py  multi_transport_endpoint_plugin.py  multi_turn_chat_example.py  multimodal_chat_example.py  openai_chat_endpoint_plugin.py  openai_plugin_usage_example.py  openai_responses_example.py  parse_profile_export.py  pluggy_demo.py  plugin_example.py  process_raw_records.py  pure_di_example.py  requirements.txt  rich_profile_progress_container_example.py  rich_worker_status_container_example.py  rust_streaming_client_demo.py  simple_dask_test.py  split_screen_ui_demo.py  test_concurrent_credits.py  test_credit_flow.py  test_http_worker.py  test_openai_plugin.py  test_worker_fix.py  timing_accuracy_comparison.py
examples/user_plugin_example/: pyproject.toml
examples/user_plugin_example/aiperf_custom_plugin/: __init__.py  clients.py  exporters.py  services.py
guidebook/: CHAPTERS-31-40-STATUS.md  COMPLETION_SUMMARY.md  INDEX.md  chapter-01-introduction.md  chapter-02-installation-setup.md  chapter-03-quick-start.md  chapter-04-core-concepts.md  chapter-05-architecture-fundamentals.md  chapter-06-system-controller.md  chapter-07-workers-architecture.md  chapter-08-worker-manager.md  chapter-09-dataset-manager.md  chapter-10-timing-manager.md  chapter-11-credit-system.md  chapter-12-records-manager.md  chapter-13-record-processors.md  chapter-14-zmq-communication.md  chapter-15-message-system.md  chapter-16-dataset-types.md  chapter-17-dataset-loaders.md  chapter-18-dataset-composers.md  chapter-19-data-generators.md  chapter-20-metrics-foundation.md  chapter-21-record-metrics.md  chapter-22-aggregate-derived-metrics.md  chapter-23-http-client-architecture.md  chapter-24-openai-client.md  chapter-25-sse-stream-handling.md  chapter-26-tcp-optimizations.md  chapter-27-request-converters.md  chapter-28-response-parsers.md  chapter-29-configuration-architecture.md  chapter-30-userconfig-deep-dive.md  chapter-31-serviceconfig-deep-dive.md  chapter-32-cli-integration.md  chapter-33-validation-system.md  chapter-34-ui-architecture.md  chapter-35-dashboard-implementation.md  chapter-36-exporters-system.md  chapter-37-log-management.md  (+14 more)
integration-tests/: Makefile  README.md  conftest.py  pyproject.toml  release_notes.md  run_server.sh  test_integration_basic.py  test_server.py
integration_tests/: aiohttp_test.py  helpers.py  httpx_example.py  httpx_test.py  httpx_vs_aiohttp_test.py  rust_streaming_test.py  rust_test.py  rust_timing.py  test_both.py  test_splash.py
k8s/: README.md
lib/streaming/: Cargo.toml  INSTALL.md  README.md  STREAMING_TOKENS_SUMMARY.md  SUMMARY.md  pyproject.toml  test_streaming_tokens.py  test_timers.py  test_timers_return.py
lib/streaming/examples/: ai_inference_timing.py  basic_usage.py  simple_ttfb_test.py  ttfb_comparison.py
lib/streaming/python/aiperf_streaming/: __init__.py  models.py
lib/streaming/src/: client.rs  errors.rs  lib.rs  request.rs  timer.rs  timers.rs
lib/streaming/tests/: test_basic.py
mock_server/: Makefile
performance_visualizations/: AGGREGATE_THROUGHPUT_GUIDE.md  README.md  VISUALIZATIONS_INDEX.md  dashboard.html
reports/: openai_benchmark_report.json  test_report.json
scripts/: debug_aiperf.py  run_aiperf.py  run_minikube_integration_tests.sh  setup_minikube_testing.sh  test_all_features.sh  test_k8s_e2e.sh
tests/: base_test_component_service.py  base_test_controller_service.py  base_test_service.py  conftest.py  test_aiperf_task.py  test_audio_config.py  test_hooks.py  (+20 more)
(+1863 files in other folders)
