# Build
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "aiperf/__init__.py"

[tool.hatch.build.targets.wheel]
# Include py.typed file in package distribution
packages = ["aiperf"]

[tool.hatch.build.targets.wheel.force-include]
"aiperf/py.typed" = "aiperf/py.typed"

[project]
name = "aiperf"
version = "0.1.0"
description = "AIPerf is a package for performance testing of AI models"
authors = []
dependencies = [
  "aiohttp==3.12.13",
  "numpy==2.2.6",
  "openai[aiohttp]~=1.92.2",
  "orjson==3.10.18",
  "pandas==2.3.0",
  "pillow==11.1.0",
  "pydantic==2.11.4",
  "pydantic-settings>=2.9.1",
  "cyclopts>=3.0.0",
  "pyzmq==26.4.0",
  "rich==14.0.0",
  "ruamel.yaml==0.18.12",
  "setproctitle==1.3.6",
  "soundfile==0.13.1",
  "tqdm>=4.67.1",
  "transformers>=4.52.0",
  "uvloop==0.21.0",
  "orjson==3.10.18",
  "pandas==2.3.0",
  "aiofiles~=24.1.0",
  "psutil~=7.0.0",
  "openai[aiohttp]~=1.92.2",
  "dask[distributed]~=2025.5.1",
  "bokeh~=3.7.3",
]
readme = "README.md"
requires-python = ">=3.10"
packages = [{ include = "aiperf" }]

# CLI Entrypoint
[project.scripts]
aiperf = "aiperf.cli:app"

[project.optional-dependencies]
dev = [
  "pytest>=7.0.0",
  "pytest-asyncio",
  "pytest-cov",
  "ruff>=0.0.0",
  "pre-commit>=4.2.0",
  "mkinit>=1.1.0",
  "black>=25.1.0",
  "mypy>=1.0.0",
  "types-aiofiles",
  "types-orjson",
  "types-pillow",
  "types-pyyaml",
  "types-requests",
  "types-psutil",
  "types-tqdm",
]


[tool.ruff]
# Base settings for ruff
line-length = 88
indent-width = 4
exclude = ["__pycache__", "build", "dist", ".venv", "venv"]

[tool.ruff.lint]
select = [
    # pycodestyle (except E501)
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]
# Ignore line length errors, ruff format will handle this but
# can have some lines that are slightly over due to the way formatting works
ignore = ["E501"]

[tool.pytest.ini_options]
# Basic pytest configuration
testpaths = ["aiperf/tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.mypy]
# MyPy type checking configuration
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
show_error_codes = true

# Paths to check
files = ["aiperf/"]

# Module-specific overrides
[[tool.mypy.overrides]]
module = [
    "transformers.*",
    "dask.*",
    "bokeh.*",
    "soundfile.*",
    "setproctitle.*",
    "ruamel.*",
    "uvloop.*",
]
ignore_missing_imports = true
