# SPDX-FileCopyrightText: Copyright (c) 2025 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: Apache-2.0

# Build
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "aiperf/__init__.py"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["aiperf"]

[project]
name = "aiperf"
version = "0.1.1"
description = "AIPerf is a package for performance testing of AI models"
readme = "README.md"
license = {text = "Apache-2.0"}
license-files = ["LICENSE"]
authors = [
    { name = "NVIDIA Inc.", email = "sw-dl-dynamo@nvidia.com" },
]
requires-python = ">=3.10"
dependencies = [
  "aiofiles~=24.1.0",
  "aiohttp~=3.12.14",
  "cyclopts>=3,<4",
  "dependency-injector>=4.41.0",
  "numpy~=2.2.6",
  "openai[aiohttp]~=1.92.2",
  "orjson~=3.10.18",
  "pandas~=2.3.0",
  "pillow~=11.1.0",
  "psutil~=7.0.0",
  "pydantic~=2.11.4",
  "pydantic-settings~=2.10.0",
  "pyzmq~=26.4.0",
  "rich~=14.1.0",
  "ruamel.yaml~=0.18.12",
  "setproctitle~=1.3.6",
  "soundfile~=0.13.1",
  "textual~=5.3.0",
  "tqdm>=4.67.1",
  "transformers>=4.52.0",
  "uvloop~=0.21.0",
]

# CLI Entrypoints
[project.scripts]
aiperf = "aiperf.cli:app"
aiperf-worker = "aiperf.workers.worker:main"
aiperf-worker-manager = "aiperf.workers.worker_manager:main"
aiperf-system-controller = "aiperf.controller.system_controller:main"
aiperf-dataset-manager = "aiperf.dataset.dataset_manager:main"
aiperf-timing-manager = "aiperf.timing.timing_manager:main"
aiperf-records-manager = "aiperf.records.records_manager:main"
aiperf-record-processor = "aiperf.records.record_processor_service:main"

# Plugin Entry Points for Dependency Injection
[project.entry-points."aiperf.services"]
system_controller = "aiperf.controller.system_controller:SystemController"
worker_manager = "aiperf.workers.worker_manager:WorkerManager"
dataset_manager = "aiperf.dataset.dataset_manager:DatasetManager"
timing_manager = "aiperf.timing.timing_manager:TimingManager"
records_manager = "aiperf.records.records_manager:RecordsManager"
record_processor = "aiperf.records.record_processor_service:RecordProcessorService"

[project.entry-points."aiperf.exporters"]
json_exporter = "aiperf.exporters.json_exporter:JsonExporter"
csv_exporter = "aiperf.exporters.csv_exporter:CsvExporter"
console_metrics_exporter = "aiperf.exporters.console_metrics_exporter:ConsoleMetricsExporter"
console_error_exporter = "aiperf.exporters.console_error_exporter:ConsoleErrorExporter"

[project.entry-points."aiperf.clients"]
aiohttp_client = "aiperf.clients.http.aiohttp_client:AIOHTTPClient"
openai_client = "aiperf.clients.openai.openai_aiohttp:OpenAIAIOHTTPClient"

[project.entry-points."aiperf.composers"]
synthetic_composer = "aiperf.dataset.composer.synthetic:SyntheticComposer"
custom_composer = "aiperf.dataset.composer.custom:CustomComposer"

[project.entry-points."aiperf.processors"]
metric_record_processor = "aiperf.post_processors.metric_record_processor:MetricRecordProcessor"
metric_results_processor = "aiperf.post_processors.metric_results_processor:MetricResultsProcessor"

[project.entry-points."aiperf.ui"]
no_ui = "aiperf.ui.no_ui:NoUI"
tqdm_ui = "aiperf.ui.tqdm_ui:TqdmUI"
dashboard_ui = "aiperf.ui.dashboard.aiperf_dashboard_ui:AIPerfDashboardUI"

[project.entry-points."aiperf.communication"]
zmq_communication = "aiperf.zmq.zmq_comms:ZMQCommunication"

[project.entry-points."aiperf.service_managers"]
multiprocess_manager = "aiperf.controller.multiprocess_service_manager:MultiprocessServiceManager"
kubernetes_manager = "aiperf.controller.kubernetes_service_manager:KubernetesServiceManager"

[project.entry-points."aiperf.zmq_proxies"]
router_dealer_proxy = "aiperf.zmq.zmq_proxy_sockets:RouterDealerProxy"
pub_sub_proxy = "aiperf.zmq.zmq_proxy_sockets:PubSubProxy"

[project.entry-points."aiperf.rate_generators"]
fixed_rate = "aiperf.timing.fixed_schedule_strategy:FixedScheduleStrategy"
request_rate = "aiperf.timing.request_rate_strategy:RequestRateStrategy"

[project.optional-dependencies]
dev = [
  "black>=25.1.0",
  "mkinit>=1.1.0",
  "pre-commit>=4.2.0",
  "pytest-asyncio",
  "pytest-cov",
  "pytest>=7.0.0",
  "pytest-xdist>=3.8.0",
  "ruff>=0.0.0",
  "scipy>=1.13.0",
]


[tool.ruff]
# Base settings for ruff
line-length = 88
indent-width = 4
exclude = ["__pycache__", "build", "dist", ".venv", "venv"]

[tool.ruff.lint]
select = [
    # pycodestyle (except E501)
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]
# Ignore line length errors, ruff format will handle this but
# can have some lines that are slightly over due to the way formatting works
ignore = ["E501"]

[tool.pytest.ini_options]
# Basic pytest configuration
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
