# Copyright 2025, NVIDIA CORPORATION & AFFILIATES. All rights reserved.
#
# Redistribution and use in source and binary forms, with or without
# modification, are permitted provided that the following conditions
# are met:
#  * Redistributions of source code must retain the above copyright
#    notice, this list of conditions and the following disclaimer.
#  * Redistributions in binary form must reproduce the above copyright
#    notice, this list of conditions and the following disclaimer in the
#    documentation and/or other materials provided with the distribution.
#  * Neither the name of NVIDIA CORPORATION nor the names of its
#    contributors may be used to endorse or promote products derived
#    from this software without specific prior written permission.
#
# THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS ``AS IS'' AND ANY
# EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE
# IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR
# PURPOSE ARE DISCLAIMED.  IN NO EVENT SHALL THE COPYRIGHT OWNER OR
# CONTRIBUTORS BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL,
# EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT LIMITED TO,
# PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS OF USE, DATA, OR
# PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY THEORY
# OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT
# (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE
# OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.

# Build
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "aiperf/__init__.py"

[project]
name = "aiperf"
readme = "README.md"
description = "AI Perf Analyzer CLI - CLI tool to simplify profiling LLMs and AI models"
license = {text = "BSD"}
dynamic = ["version"]
requires-python = ">=3.10,<4"
authors = []
dependencies = [
  "asyncio==3.4.3",
  "pyzmq==26.4.0",
]

# CLI Entrypoint
[project.scripts]
genai-perf = "genai_perf.main:main"

[project.optional-dependencies]
dev = [
  "pytest>=7.0.0",
  "ruff>=0.0.0",
]

[project.urls]
Homepage = "https://example.com"
Repository = "https://github.com/yourusername/my_project"

[tool.ruff]
# Base settings for ruff
line-length = 88
indent-width = 4
select = ["ALL"]
ignore = []
exclude = ["__pycache__", "build", "dist", ".venv", "venv"]

[tool.pytest.ini_options]
# Basic pytest configuration
testpaths = ["tests"]
