[package]
name = "aiperf_streaming"
version = "0.1.0"
edition = "2024"

[lib]
name = "aiperf_streaming"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.20", features = ["extension-module"] }
pyo3-asyncio = { version = "0.20.0", features = ["tokio-runtime"] }
reqwest = { version = "0.12", features = ["stream", "json"] }
tokio = { version = "1.0", features = ["full"] }
serde_json = "1.0"
futures-util = "0.3"
bytes = "1.0"
