[package]
name = "aiperf_streaming"
version = "0.1.0"
edition = "2024"

[lib]
name = "aiperf_streaming"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.25.0", features = ["extension-module", "abi3-py310"] }
reqwest = { version = "0.12.10", features = ["json", "stream", "rustls-tls"], default-features = false }
tokio = { version = "1.39.0", features = ["full"] }
tokio-stream = "0.1.14"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3"
bytes = "1.5"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.6", features = ["v4"] }
tracing = "0.1"
anyhow = "1.0"
once_cell = "1.19"

[build-dependencies]
pyo3-build-config = "0.25.0"