[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "aiperf_streaming"
description = "High-performance streaming HTTP client for AI performance analysis"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio", "httpx"]

[tool.maturin]
python-source = "python"
module-name = "aiperf_streaming.aiperf_streaming"